--- a/project.config.json
+++ b/project.config.json
@@ -1,4 +1,5 @@
 {
+  "cloudfunctionRoot": "cloud/",
   "description": "项目配置文件",
   "packOptions": {
     "ignore": []
@@ -52,6 +53,7 @@
     "servePath": ""
   },
   "isGameTourist": false,
+  "cloudfunctionTemplateRoot": "cloudfunctionTemplate",
   "condition": {
     "search": {
       "list": []
