--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,4 +1,5 @@
 {
+  "setting": {},
   "condition": {
     "plugin": {
       "list": []
@@ -14,6 +15,13 @@
         {
           "name": "详细页面1",
           "pathName": "pages/items/items",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/add/add",
+          "pathName": "pages/add/add",
+          "query": "",
           "scene": null
         }
       ]
